<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditTextPreference
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:key="@string/pref_location_key"
        android:singleLine="true"
        android:title="@string/pref_location_label" />

    <ListPreference
        android:key="@string/pref_temperature_units_key"
        android:title="@string/pref_temperature_units_label"
        android:dialogTitle="@string/pref_temperature_units_label"
        android:defaultValue="@string/pref_temperature_units_metric"
        android:entries="@array/pref_temperature_units_entries"
        android:entryValues="@array/pref_temperature_units_values"/>
</PreferenceScreen>